[package]
name = "poriborton"
version = "0.2.2"
authors = ["Muhammad Mominul Huque <mominul2082@gmail.com>"]
description = "Interconversion between Unicode and various Bengali ANSI encodings."
license = "MIT"
keywords = ["unicode", "bengali", "bijoy", "ansi", "ascii"]
categories = ["text-processing"]
repository = "https://github.com/OpenBangla/poriborton"
edition = "2018"
exclude = ["/data"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matches = "0.1"
phf = { version = "0.10", features = ["macros"] }

[dev-dependencies]
pretty_assertions = "1.2"
