[package]
name = "poriborton"
version = "0.2.3"
authors = ["Muhammad Mominul Huque <mominul2082@gmail.com>"]
description = "Interconversion between Unicode and various Bengali ANSI encodings."
license = "MIT"
keywords = ["unicode", "bengali", "bijoy", "ansi", "ascii"]
categories = ["text-processing"]
repository = "https://github.com/OpenBangla/poriborton"
edition = "2021"
rust-version = "1.63.0"
exclude = ["/data"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
pretty_assertions = "1.4"
